@@ -520,12 +520,18 @@ sub aggregate (@) { #{{{
 		}
 
 		foreach my $entry ($f->entries) {
+			my $content=$content=$entry->content;
+			# atom feeds may have no content, only a summary
+			if (! defined $content) {
+				$content=$entry->summary;
+			}
+
 			add_page(
 				feed => $feed,
 				copyright => $f->copyright,
 				title => defined $entry->title ? decode_entities($entry->title) : "untitled",
 				link => $entry->link,
-				content => defined $entry->content->body ? $entry->content->body : "",
+				content => defined $content ? $content->body : "",
 				guid => defined $entry->id ? $entry->id : time."_".$feed->{name},
 				ctime => $entry->issued ? ($entry->issued->epoch || time) : time,
 			);
